Integrating PopCameraDevice dll for camera devices on windows (and later osx)
Former-commit-id: 7b97397b7c8a7c2c6e99d4df9376deb521f561c8

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -27,6 +27,7 @@
     </ClCompile>
     <Link>
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
+      <DelayLoadDLLs>PopCameraDevice.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
