Added UnitTest.js as submodule
Former-commit-id: d58dc30e0310643e14f562609da53813539263a7

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/Ezsift"]
 	path = src/Ezsift
 	url = https://github.com/SoylentGraham/ezSIFT.git
+[submodule "UnitTest.js"]
+	path = UnitTest.js
+	url = https://github.com/NewChromantics/PopEngineUnitTests.git
