Now getting frames out of PopCameraDevice
Former-commit-id: c946eaecbbb1b12253c2a63c591fc1e691458210

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -23,7 +23,7 @@
       <FloatingPointExceptions>true</FloatingPointExceptions>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <PreprocessorDefinitions>GLEW_STATIC;GLEW_NO_GLU;PLATFORM_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLEW_STATIC;GLEW_NO_GLU;PLATFORM_WINDOWS;ENABLE_OPENGL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
