--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -180,9 +180,69 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\CFLite.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <None Include="..\src\Libs\JavascriptCore\win64\CFLite.pdb" />
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\icudt63.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\icuin63.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <None Include="..\src\Libs\JavascriptCore\win64\icuin63.pdb" />
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\icuuc63.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\JavaScriptCore.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <None Include="..\src\Libs\JavascriptCore\win64\JavaScriptCore.pdb" />
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\pthreadsVC2.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <None Include="..\src\Libs\JavascriptCore\win64\pthreadsVC2.pdb" />
+    <CustomBuild Include="..\src\Libs\JavascriptCore\win64\WTF.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
+    <None Include="..\src\Libs\JavascriptCore\win64\WTF.pdb" />
     <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.cs" />
     <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.cs.meta" />
-    <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll" />
+    <CustomBuild Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
+      <FileType>Document</FileType>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
+    </CustomBuild>
     <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.dll.meta" />
     <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.pdb" />
     <None Include="..\src\Libs\PopCameraDevice\PopCameraDevice.pdb.meta" />
@@ -208,18 +268,30 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</ExcludedFromBuild>
     </None>
     <None Include="..\UnitTest.js\bootup.js" />
-    <None Include="..\UnitTest.js\CameraTest\Blit.frag.glsl" />
+    <None Include="..\UnitTest.js\CameraTest\Blit.frag.glsl">
+      <FileType>Document</FileType>
+    </None>
     <None Include="..\UnitTest.js\CameraTest\bootup.js" />
     <None Include="..\UnitTest.js\CameraTest\CameraTest.js" />
-    <None Include="..\UnitTest.js\CameraTest\Quad.vert.glsl" />
-    <None Include="..\UnitTest.js\CameraTest\Uvy844.frag.glsl" />
-    <None Include="..\UnitTest.js\CameraTest\Yuv8888.frag.glsl" />
-    <None Include="..\UnitTest.js\CameraTest\Yuv8_88.frag.glsl" />
+    <None Include="..\UnitTest.js\CameraTest\Quad.vert.glsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="..\UnitTest.js\CameraTest\Uvy844.frag.glsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="..\UnitTest.js\CameraTest\Yuv8888.frag.glsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="..\UnitTest.js\CameraTest\Yuv8_88.frag.glsl">
+      <FileType>Document</FileType>
+    </None>
     <None Include="..\UnitTest.js\Common\PopEngine.js" />
     <None Include="..\UnitTest.js\Common\PopShaderCache.js" />
     <None Include="..\UnitTest.js\Common\TFrameCounter.js" />
     <None Include="..\UnitTest.js\HttpServer\bootup.js" />
-    <None Include="..\UnitTest.js\Readme.md" />
+    <None Include="..\UnitTest.js\Readme.md">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp" />
@@ -389,20 +461,24 @@
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="PopEngine.props" />
+    <Import Project="BuildToolCopyFileToOutput.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Master|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="PopEngine.props" />
     <Import Project="Release.props" />
+    <Import Project="BuildToolCopyFileToOutput.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="PopEngine.props" />
+    <Import Project="BuildToolCopyFileToOutput.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Master|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="PopEngine.props" />
     <Import Project="Release.props" />
+    <Import Project="BuildToolCopyFileToOutput.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -430,6 +506,10 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuild />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Master|x64'">
     <ClCompile>
@@ -443,6 +523,10 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuild />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -457,6 +541,10 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuild />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">
     <ClCompile>
@@ -471,6 +559,10 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuildStep />
+    <CustomBuild />
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
