turned off incremental linking to get rid of warning
Former-commit-id: 7c3fcc566415c969cae757704101a4755bee8b64

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -4,6 +4,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>$(ProjectDir)..\src\SoyLib\src;$(ProjectDir)..\src\Libs;$(IncludePath)</IncludePath>
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
@@ -29,6 +30,7 @@
     <Link>
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
       <DelayLoadDLLs>PopCameraDevice.dll</DelayLoadDLLs>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
