Set output & intermediate directories so it's easier to copy build
Former-commit-id: eb93241be0b77c95a1eb1648237041f38b963d3f

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -5,6 +5,8 @@
   <PropertyGroup>
     <IncludePath>$(ProjectDir)..\src\SoyLib\src;$(ProjectDir)..\src\Libs;$(IncludePath)</IncludePath>
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(Platform)\$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
