--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = src/Ezsift
 	url = https://github.com/SoylentGraham/ezSIFT.git
 [submodule "UnitTest.js"]
-	path = UnitTest.js
+	path = UnitTest
 	url = https://github.com/NewChromantics/PopEngineUnitTests.git
